// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectNetwork should render 1`] = `
<div>
  <div>
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="downshift-0-menu"
      data-testid="SelectNetwork"
      role="combobox"
    >
      <label
        for="downshift-0-input"
        id="downshift-0-label"
      />
      
      <div
        class="Input__InputWrapperStyled-sc-1i8sd1r-0 jTKKsy"
      >
        <div
          class="Circle__CircleWrapper-sc-d5u41q-0 cPUFYC border-theme-secondary-200 dark:border-theme-secondary-700 text-theme-secondary-500 ring-theme-background"
          data-testid="SelectNetworkInput__network"
        />
        <div
          class="relative flex flex-1 h-full"
        >
          <input
            aria-autocomplete="list"
            aria-controls="downshift-0-menu"
            aria-labelledby="downshift-0-label"
            autocomplete="off"
            class="Input__InputStyled-sc-1i8sd1r-1 exXuoZ p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
            data-testid="SelectNetworkInput__input"
            id="downshift-0-input"
            placeholder="Enter a cryptoasset name"
            value=""
          />
          
        </div>
      </div>
    </div>
    <div
      class=""
      data-testid="SelectNetwork__options"
    >
      <div
        class="mt-6 hidden"
      >
        <ul
          aria-labelledby="downshift-0-label"
          class="grid grid-cols-7 gap-3 mt-3"
          id="downshift-0-menu"
          role="listbox"
        />
      </div>
      <div
        class="mt-6 hidden"
      >
        <ul
          aria-labelledby="downshift-0-label"
          class="grid grid-cols-7 gap-3 mt-3"
          id="downshift-0-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectNetwork should render with hidden options 1`] = `
<div>
  <div>
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="downshift-4-menu"
      data-testid="SelectNetwork"
      role="combobox"
    >
      <label
        for="downshift-4-input"
        id="downshift-4-label"
      />
      
      <div
        class="Input__InputWrapperStyled-sc-1i8sd1r-0 jTKKsy"
      >
        <div
          class="Circle__CircleWrapper-sc-d5u41q-0 cPUFYC border-theme-secondary-200 dark:border-theme-secondary-700 text-theme-secondary-500 ring-theme-background"
          data-testid="SelectNetworkInput__network"
        />
        <div
          class="relative flex flex-1 h-full"
        >
          <input
            aria-autocomplete="list"
            aria-controls="downshift-4-menu"
            aria-labelledby="downshift-4-label"
            autocomplete="off"
            class="Input__InputStyled-sc-1i8sd1r-1 exXuoZ p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
            data-testid="SelectNetworkInput__input"
            id="downshift-4-input"
            placeholder="Enter a cryptoasset name"
            value=""
          />
          
        </div>
      </div>
    </div>
    <div
      class="hidden"
      data-testid="SelectNetwork__options"
    >
      <div
        class="mt-6"
      >
        <div
          class="text-sm font-bold text-theme-secondary-400 dark:text-theme-secondary-700"
        >
          PUBLIC NETWORKS
        </div>
        <ul
          aria-labelledby="downshift-4-label"
          class="grid grid-cols-7 gap-3 mt-3"
          id="downshift-4-menu"
          role="listbox"
        >
          <li
            class="inline-block cursor-pointer h-18"
            data-testid="SelectNetwork__NetworkIcon--container"
          >
            <div
              aria-label="ARK"
              class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-primary-600"
              data-testid="NetworkIcon-ARK-ark.mainnet"
            >
              <div
                class="sc-bdnxRM NjstW"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg>
                  ark.svg
                </svg>
              </div>
            </div>
          </li>
          <li
            class="inline-block cursor-pointer h-18"
            data-testid="SelectNetwork__NetworkIcon--container"
          >
            <div
              aria-label="Compendia"
              class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-primary-600"
              data-testid="NetworkIcon-ARK-bind.mainnet"
            >
              <div
                class="sc-bdnxRM NjstW"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg>
                  bind.svg
                </svg>
              </div>
            </div>
          </li>
          <li
            class="inline-block cursor-pointer h-18"
            data-testid="SelectNetwork__NetworkIcon--container"
          >
            <div
              aria-label="Qredit"
              class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-primary-600"
              data-testid="NetworkIcon-ARK-xqr.mainnet"
            >
              <div
                class="sc-bdnxRM NjstW"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg>
                  xqr.svg
                </svg>
              </div>
            </div>
          </li>
        </ul>
      </div>
      <div
        class="Divider-sc-17ehhxk-0 hZpmpp border-theme-secondary-300 dark:border-theme-secondary-800"
        type="horizontal"
      />
      <div
        class="mt-6"
      >
        <div
          class="flex justify-between items-center"
        >
          <span
            class="text-sm font-bold text-theme-secondary-400 dark:text-theme-secondary-700"
          >
            DEVELOPMENT NETWORKS
          </span>
          <span
            data-testid="SelectNetwork__developmentNetworks"
          >
            <label
              class="flex"
            >
              <input
                class="Toggle__Input-sc-6s3wfu-0 lktEK"
                data-testid="SelectNetwork__developmentNetworks-toggle"
                type="checkbox"
              />
              <div
                class="Toggle__Handle-sc-6s3wfu-1 beOBjf"
              >
                <span
                  class="Toggle__HandleInner-sc-6s3wfu-2 poMob"
                />
              </div>
            </label>
          </span>
        </div>
        <ul
          aria-labelledby="downshift-4-label"
          class="grid grid-cols-7 gap-3 mt-3 hidden"
          id="downshift-4-menu"
          role="listbox"
        >
          <li
            class="inline-block cursor-pointer h-18"
            data-testid="SelectNetwork__NetworkIcon--container"
          >
            <div
              aria-label="ARK Devnet"
              class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-secondary-700"
              data-testid="NetworkIcon-ARK-ark.devnet"
            >
              <div
                class="sc-bdnxRM NjstW"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg>
                  ark.svg
                </svg>
              </div>
            </div>
          </li>
          <li
            class="inline-block cursor-pointer h-18"
            data-testid="SelectNetwork__NetworkIcon--container"
          >
            <div
              aria-label="Compendia Testnet"
              class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-secondary-700"
              data-testid="NetworkIcon-ARK-bind.testnet"
            >
              <div
                class="sc-bdnxRM NjstW"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg>
                  bind.svg
                </svg>
              </div>
            </div>
          </li>
          <li
            class="inline-block cursor-pointer h-18"
            data-testid="SelectNetwork__NetworkIcon--container"
          >
            <div
              aria-label="Qredit Testnet"
              class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-secondary-700"
              data-testid="NetworkIcon-ARK-xqr.testnet"
            >
              <div
                class="sc-bdnxRM NjstW"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg>
                  xqr.svg
                </svg>
              </div>
            </div>
          </li>
          <li
            class="inline-block cursor-pointer h-18"
            data-testid="SelectNetwork__NetworkIcon--container"
          >
            <div
              aria-label="Lisk Testnet"
              class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-secondary-700"
              data-testid="NetworkIcon-LSK-lsk.testnet"
            >
              <div
                class="sc-bdnxRM NjstW"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg>
                  lsk.svg
                </svg>
              </div>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectNetwork should render with networks 1`] = `
<div>
  <div>
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="downshift-2-menu"
      data-testid="SelectNetwork"
      role="combobox"
    >
      <label
        for="downshift-2-input"
        id="downshift-2-label"
      />
      
      <div
        class="Input__InputWrapperStyled-sc-1i8sd1r-0 jTKKsy"
      >
        <div
          class="Circle__CircleWrapper-sc-d5u41q-0 cPUFYC border-theme-secondary-200 dark:border-theme-secondary-700 text-theme-secondary-500 ring-theme-background"
          data-testid="SelectNetworkInput__network"
        />
        <div
          class="relative flex flex-1 h-full"
        >
          <input
            aria-autocomplete="list"
            aria-controls="downshift-2-menu"
            aria-labelledby="downshift-2-label"
            autocomplete="off"
            class="Input__InputStyled-sc-1i8sd1r-1 exXuoZ p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
            data-testid="SelectNetworkInput__input"
            id="downshift-2-input"
            placeholder="Enter a cryptoasset name"
            value=""
          />
          
        </div>
      </div>
    </div>
    <div
      class=""
      data-testid="SelectNetwork__options"
    >
      <div
        class="mt-6"
      >
        <div
          class="text-sm font-bold text-theme-secondary-400 dark:text-theme-secondary-700"
        >
          PUBLIC NETWORKS
        </div>
        <ul
          aria-labelledby="downshift-2-label"
          class="grid grid-cols-7 gap-3 mt-3"
          id="downshift-2-menu"
          role="listbox"
        >
          <li
            class="inline-block cursor-pointer h-18"
            data-testid="SelectNetwork__NetworkIcon--container"
          >
            <div
              aria-label="ARK"
              class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-primary-600"
              data-testid="NetworkIcon-ARK-ark.mainnet"
            >
              <div
                class="sc-bdnxRM NjstW"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg>
                  ark.svg
                </svg>
              </div>
            </div>
          </li>
          <li
            class="inline-block cursor-pointer h-18"
            data-testid="SelectNetwork__NetworkIcon--container"
          >
            <div
              aria-label="Compendia"
              class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-primary-600"
              data-testid="NetworkIcon-ARK-bind.mainnet"
            >
              <div
                class="sc-bdnxRM NjstW"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg>
                  bind.svg
                </svg>
              </div>
            </div>
          </li>
          <li
            class="inline-block cursor-pointer h-18"
            data-testid="SelectNetwork__NetworkIcon--container"
          >
            <div
              aria-label="Qredit"
              class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-primary-600"
              data-testid="NetworkIcon-ARK-xqr.mainnet"
            >
              <div
                class="sc-bdnxRM NjstW"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg>
                  xqr.svg
                </svg>
              </div>
            </div>
          </li>
        </ul>
      </div>
      <div
        class="Divider-sc-17ehhxk-0 hZpmpp border-theme-secondary-300 dark:border-theme-secondary-800"
        type="horizontal"
      />
      <div
        class="mt-6"
      >
        <div
          class="flex justify-between items-center"
        >
          <span
            class="text-sm font-bold text-theme-secondary-400 dark:text-theme-secondary-700"
          >
            DEVELOPMENT NETWORKS
          </span>
          <span
            data-testid="SelectNetwork__developmentNetworks"
          >
            <label
              class="flex"
            >
              <input
                class="Toggle__Input-sc-6s3wfu-0 lktEK"
                data-testid="SelectNetwork__developmentNetworks-toggle"
                type="checkbox"
              />
              <div
                class="Toggle__Handle-sc-6s3wfu-1 beOBjf"
              >
                <span
                  class="Toggle__HandleInner-sc-6s3wfu-2 poMob"
                />
              </div>
            </label>
          </span>
        </div>
        <ul
          aria-labelledby="downshift-2-label"
          class="grid grid-cols-7 gap-3 mt-3 hidden"
          id="downshift-2-menu"
          role="listbox"
        >
          <li
            class="inline-block cursor-pointer h-18"
            data-testid="SelectNetwork__NetworkIcon--container"
          >
            <div
              aria-label="ARK Devnet"
              class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-secondary-700"
              data-testid="NetworkIcon-ARK-ark.devnet"
            >
              <div
                class="sc-bdnxRM NjstW"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg>
                  ark.svg
                </svg>
              </div>
            </div>
          </li>
          <li
            class="inline-block cursor-pointer h-18"
            data-testid="SelectNetwork__NetworkIcon--container"
          >
            <div
              aria-label="Compendia Testnet"
              class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-secondary-700"
              data-testid="NetworkIcon-ARK-bind.testnet"
            >
              <div
                class="sc-bdnxRM NjstW"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg>
                  bind.svg
                </svg>
              </div>
            </div>
          </li>
          <li
            class="inline-block cursor-pointer h-18"
            data-testid="SelectNetwork__NetworkIcon--container"
          >
            <div
              aria-label="Qredit Testnet"
              class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-secondary-700"
              data-testid="NetworkIcon-ARK-xqr.testnet"
            >
              <div
                class="sc-bdnxRM NjstW"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg>
                  xqr.svg
                </svg>
              </div>
            </div>
          </li>
          <li
            class="inline-block cursor-pointer h-18"
            data-testid="SelectNetwork__NetworkIcon--container"
          >
            <div
              aria-label="Lisk Testnet"
              class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-secondary-700"
              data-testid="NetworkIcon-LSK-lsk.testnet"
            >
              <div
                class="sc-bdnxRM NjstW"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg>
                  lsk.svg
                </svg>
              </div>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;
